docs(openspec): add markdown validator module change (#946)
* docs(openspec): add markdown validator module change

Co-authored-by: OpenAI Codex <codex@openai.com>

* docs(openspec): require markdown validator timing baseline

Co-authored-by: OpenAI Codex <codex@openai.com>

* feat(markdown-validator): move validator into maven module

Co-authored-by: Codex <codex@openai.com>

* build(markdown-validator): refactor validator module

Co-authored-by: Codex <codex@openai.com>

* refactor(markdown-validator): simplify validation runner

Co-authored-by: Codex <codex@openai.com>

* refactor(markdown-validator): simplify validation options

Co-authored-by: Codex <codex@openai.com>

* perf(markdown-validator): parallelize link validation

Co-authored-by: Codex <codex@openai.com>

* feat(refactoring): Improving user feedback with logging

* feat(refactoring): Improving user feedback with logging

* feat(refactoring): Archive OpenSpec change

* fix(pipeline): Fix pipeline

---------

Co-authored-by: OpenAI Codex <codex@openai.com>